<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuStatus"
        app:showAsAction="always"
        android:title="@string/status_all">
        <menu>
            <item
                android:id="@+id/menuStatusDone"
                android:title="@string/status_done"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menuStatusNotDone"
                android:title="@string/status_not_done"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menuStatusALl"
                android:title="@string/status_all"
                app:showAsAction="never"/>
        </menu>
    </item>


</menu>